adding structure and hope page

--- a/index.html
+++ b/index.html
@@ -17,10 +17,96 @@
 
     <!--Main content-->
     <section>
+        <!--Background-->
+        <video autoplay="" loop="" poster="" id="bgvid">
+            <source src="/assets/img/video/leapvideo.webm" type="video/webm">
+            <source src="/assets/img/video/leapvideo.mp4" type="video/mp4">
+        </video>
 
+        <div id="index" class="container">
+            <div class="row clearfix">
+                <div class="col-md-12 column">
+                    <div class="jumbotron">
+                        <h1>
+                            LeapLearn!
+                        </h1>
+                        <p>
+                            Herramienta para la definición de gestos por usuario final con Leap Motion.
+                        </p>
+                        <p>
+                            Jesús García - Universidad Carlos III de Madrid
+                        </p>
+                        <p>
+                            <a href="pages/home.html" class="btn btn-lg btn-primary">
+                                <span class="glyphicon glyphicon-hand-up"></span>
+                                Entrar
+                            </a>
 
+                            <a href="#" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-info-sign"></span> Ayuda</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-
+        <div id="help" class="container hide">
+            <div class="transparent-background"></div>
+            <a href="#" class="btn btn-primary btn-default back"><span class="glyphicon glyphicon-chevron-left"></span> Atrás</a>
+            <div class="row clearfix">
+                <div class="col-md-12 column help-container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="thumbnail">
+                                <img alt="300x200" src="http://lorempixel.com/600/200/people" />
+                                <div class="caption">
+                                    <h3>
+                                        Thumbnail label
+                                    </h3>
+                                    <p>
+                                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                    </p>
+                                    <p>
+                                        <a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="thumbnail">
+                                <img alt="300x200" src="http://lorempixel.com/600/200/city" />
+                                <div class="caption">
+                                    <h3>
+                                        Thumbnail label
+                                    </h3>
+                                    <p>
+                                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                    </p>
+                                    <p>
+                                        <a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="thumbnail">
+                                <img alt="300x200" src="http://lorempixel.com/600/200/sports" />
+                                <div class="caption">
+                                    <h3>
+                                        Thumbnail label
+                                    </h3>
+                                    <p>
+                                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                    </p>
+                                    <p>
+                                        <a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
 
