--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
 
 </head>
 <body class="index-page">
-
-
     <!--Main content-->
     <section>
         <!--Background-->
-            <video autoplay="" loop="" poster="" id="bgvid">
-                <source src="/assets/img/video/leapvideo.webm" type="video/webm">
-                <source src="/assets/img/video/leapvideo.mp4" type="video/mp4">
-            </video>
+            <!--<video autoplay="" loop="" poster="" id="bgvid">-->
+                <!--<source src="/assets/img/video/leapvideo.webm" type="video/webm">-->
+                <!--<source src="/assets/img/video/leapvideo.mp4" type="video/mp4">-->
+            <!--</video>-->
 
         <div id="index" class="container">
             <div class="row clearfix">
