--- a/index.html
+++ b/index.html
@@ -8,18 +8,11 @@
     <meta name="description" content="Project - Final master job by Jesús García">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/bower_components/require/build/require.min.js"></script>
+
+    <!--<script src="assets/js/bower_components/require/build/require.min.js"></script>
     <script>
         require(['./assets/js/main.js'], function (common) { require(['app/Index']); });
-    </script>
-
-
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r66/three.js"></script>
-    <script src="//js.leapmotion.com/leap-0.6.2.min.js"></script>
-    <script src="//js.leapmotion.com/leap-plugins-0.1.6.1.js"></script>
-    <script src="//js.leapmotion.com/leap.rigged-hand-0.1.3.min.js"></script>
+    </script>-->
 
 
 </head>
@@ -34,6 +27,11 @@
                 <source src="/assets/img/video/leapvideo.mp4" type="video/mp4">
             </video>
 
+        <!--
+           -------------------------------------------
+               Main page
+           -------------------------------------------
+       -->
         <div id="index-content" class="index-content container">
             <div class="row clearfix">
                 <div class="col-md-12 column">
@@ -65,7 +63,11 @@
 
 
 
-
+        <!--
+            -------------------------------------------
+                HELP CONTENT
+            -------------------------------------------
+        -->
         <div class="help-content hide ">
             <a id="backToHomeButton" href="#" class="btn btn-primary btn-default back" onclick="changePages(event)"><span class="glyphicon glyphicon-chevron-left"></span> Atrás</a>
         </div>
@@ -134,9 +136,14 @@
     <div id="stage"></div>
 
 
-    <script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.5.4.min.js"></script>
-    <script src="assets/js/touch.js"></script>
 
+<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.5.4.min.js"></script>
+<script src="assets/js/touch.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r66/three.js"></script>
+<script src="//js.leapmotion.com/leap-0.6.2.min.js"></script>
+<script src="//js.leapmotion.com/leap-plugins-0.1.6.1.js"></script>
+<script src="//js.leapmotion.com/leap.rigged-hand-0.1.3.min.js"></script>
 
 
 </body>
