--- a/touch.html
+++ b/touch.html
@@ -16,134 +16,93 @@
 
 
 </head>
-<body class="index-page">
-
-<div id="postionfinger"></div>
-    <!--Main content-->
-    <section>
-        <!--Background-->
-            <video autoplay="" loop="" poster="" id="bgvid">
-                <source src="/assets/img/video/leapvideo.webm" type="video/webm">
-                <source src="/assets/img/video/leapvideo.mp4" type="video/mp4">
-            </video>
-
-        <!--
-           -------------------------------------------
-               Main page
-           -------------------------------------------
-       -->
-        <div id="index-content" class="index-content container">
-            <div class="row clearfix">
-                <div class="col-md-12 column">
-                    <div class="jumbotron">
-                        <h1>
-                            LeapLearn!
-                        </h1>
-                        <p>
-                            Herramienta para la definición de gestos por usuario final con Leap Motion.
-                        </p>
-                        <p>
-                            Jesús García - Universidad Carlos III de Madrid
-                        </p>
-                        <p><br/></p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-
-        <div class="index-content">
-                <a id="entranceButton" data-button="home" href="home.html" class="btn btn-lg btn-primary">
-                    <span class="glyphicon glyphicon-hand-up"></span>
-                    Entrar
-                </a>
-                <a id="helpButton" data-button="help" href="#" class="btn btn-lg btn-default" onclick="changePages(event)"><span class="glyphicon glyphicon-info-sign"></span> Ayuda</a>
-        </div>
+<body>
 
 
 
-        <!--
-            -------------------------------------------
-                HELP CONTENT
-            -------------------------------------------
-        -->
-        <div class="help-content hide ">
-            <a id="backToHomeButton" href="#" class="btn btn-primary btn-default back" onclick="changePages(event)"><span class="glyphicon glyphicon-chevron-left"></span> Atrás</a>
-        </div>
-
-        <div id="help-content" class="help-content container hide">
-            <div class="transparent-background"></div>
-
-            <div class="row clearfix">
-                <div class="col-md-12 column help-container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="thumbnail">
-                                <img alt="300x200" src="http://lorempixel.com/600/200/people" />
-                                <div class="caption">
-                                    <h3>
-                                        Thumbnail label
-                                    </h3>
-                                    <p>
-                                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-                                    </p>
-                                    <p>
-                                        <a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="thumbnail">
-                                <img alt="300x200" src="http://lorempixel.com/600/200/city" />
-                                <div class="caption">
-                                    <h3>
-                                        Thumbnail label
-                                    </h3>
-                                    <p>
-                                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-                                    </p>
-                                    <p>
-                                        <a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="thumbnail">
-                                <img alt="300x200" src="http://lorempixel.com/600/200/sports" />
-                                <div class="caption">
-                                    <h3>
-                                        Thumbnail label
-                                    </h3>
-                                    <p>
-                                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-                                    </p>
-                                    <p>
-                                        <a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </section>
-
-    <div id="stage"></div>
+<script src="assets/js/lib/three.min.js"></script>
+<script src="assets/js/lib/leapmotion/leap-0.6.0.js"></script>
+<script src="assets/js/lib/leapmotion/leap-plugins-0.1.6.js"></script>
+<script src="assets/js/lib/leapmotion/leap.rigged-hand-0.1.4.js"></script>
+<script src="assets/js/bower_components/jquery/dist/jquery.min.js"></script>
 
 
 
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+
+<div id="stage" style="background-color:rgb(250,235,200); width:800px; height:600"></div>
 <script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.5.4.min.js"></script>
-<script src="assets/js/touch.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r66/three.js"></script>
-<script src="//js.leapmotion.com/leap-0.6.2.min.js"></script>
-<script src="//js.leapmotion.com/leap-plugins-0.1.6.1.js"></script>
-<script src="//js.leapmotion.com/leap.rigged-hand-0.1.3.min.js"></script>
+<script>
+    var stageWidth = 800;
+    var stageHeight = 600;
+
+    var tips = new Array(10);
+
+    var stage = new Kinetic.Stage({
+        container: 'stage',
+        width: stageWidth,
+        height: stageHeight
+    });
+
+    var leap = new Leap.Controller();
+    leap.connect();
+
+    var layer = new Kinetic.Layer();
+
+    //Make ten circles to use as finger tips
+    for (var t = 0; t < 10; t++) {
+        var tip = new Kinetic.Circle({
+            x: 239,
+            y: 75,
+            radius: 20,
+            fill: 'green',
+            stroke: 'black',
+            strokeWidth: 4,
+            opacity: .5,
+            visible: false
+        });
+        tips[t] = tip;
+        layer.add(tip);
+    }
+
+    // add the layer to the stage
+    stage.add(layer);
+
+    var anim = new Kinetic.Animation(function (frame) {
+        var time = frame.time,
+                timeDiff = frame.timeDiff,
+                frameRate = frame.frameRate;
+
+        // update finger tip display with data from latest frame
+        var tipPointer = 0;
+        var leapFrame = leap.frame();
+        if (leapFrame.valid) {
+            var iBox = leapFrame.interactionBox;
+            for (var p = 0; p < leapFrame.pointables.length; p++) {
+                var pointable = leapFrame.pointables[p];
+                var pos = iBox.normalizePoint(pointable.tipPosition, true);
+                tips[tipPointer].setX(pos[0] * stageWidth);
+                tips[tipPointer].setY(stageHeight - pos[1] * stageHeight);
+                tips[tipPointer].setVisible(true);
+                if (pointable.touchZone == "hovering") {
+                    tips[tipPointer].setOpacity(.375 - pointable.touchDistance * .2);
+                    tips[tipPointer].setFillRGB({r: 0, g: 128, b: 0});
+                } else if (pointable.touchZone == "touching") {
+                    tips[tipPointer].setOpacity(.375 - pointable.touchDistance * .5);
+                    tips[tipPointer].setFillRGB({r: 128, g: 0, b: 0});
+                } else {
+                    tips[tipPointer].setOpacity(.1);
+                    tips[tipPointer].setFillRGB({r: 0, g: 0, b: 128});
+                }
+                if (tipPointer < 9) tipPointer++;
+            }
+            while (tipPointer <= 9) tips[tipPointer++].setVisible(false);
+        }
+    }, layer);
+
+    anim.start();
+
+</script>
 
 
 </body>
