--- a/home.html
+++ b/home.html
@@ -2,86 +2,115 @@
 <head>
 
     <link rel="stylesheet" href="assets/css/style.css"/>
-
-
-
-
     <!-- override the bundled playback plugin: -->
     <!--<script src="build/leap.playback-0.2.1.js"></script>-->
 
 </head>
 <body class="home-page">
 
-
-
-<div id="debugger" style="display: none"></div>
-
+<!-- Logo-->
 <img src="assets/img/leaplearn_uc3m.jpg" width="400" alt=""/>
+
+<!-- Image detection -->
 <img class="img-detect" src="assets/img/detect.gif" width="400" alt=""/>
 
-<p class="dev">Debug for one finger:</p>
-<p>
-    Finger name: <span id="finger-name">…</span><br/>
-    Tip position: <span id="finger-position">…</span><br/>
-    Tip position (non stable): <span id="tip-position">…</span><br/>
-    Finger distance: <span id="finger-distance">…</span><br/>
-    Finger Acceleration: <span id="aceleration">…</span> <br/>
-
-    Gesture zone: <span id="touch-zone">…</span> <br/>
-    Gesture made: <span id="gesture-made">…</span>
-</p>
+<!-- Countdown -->
+<svg id="countdown" width="250" height="250" viewbox="0 0 250 250">
+    <path id="border" transform="translate(125, 125)"/>
+    <path id="loader" transform="translate(125, 125) scale(.84)"/>
+</svg>
 
 
-<p>Normalized Position: <span id="normPosition">…</span></p>
-<p>Tip Position: <span id="tipPosition">…</span></p>
+<!-- Left side-->
+<aside class="left">
+    <h3>Gestures:</h3>
+    <input id="name-gesture" type="text"/>
+    <button name="create_button" class="btn btn-sm btn-primary" onclick="record()">Create gesture</button>
+    <ul class="gesture-list">
+        <li><span class="name">Name gesture</span><span class="accurace">80%</span></li>
+        <li><span class="name">Name gesture</span><span class="accurace">50%</span></li>
+        <li><span class="name">Name gesture</span><span class="accurace">10%</span></li>
+        <li><span class="name">Name gesture</span><span class="accurace">20%</span></li>
+    </ul>
+</aside>
 
 
-<p>Gesture count: <span id="gestures">Gesture count</span></p>
+<!-- Right side-->
+<aside class="right">
+
+    <!-- Gesture box -->
+    <div id="info"></div>
+
+    <!-- Status -->
+    <div id="notification-square">
+        <div class="text-notification"></div>
+        <div class="ball-l"></div>
+        <div class="ball-r"></div>
+    </div>
+
+    <!-- 3D Graphics -->
+    <canvas id="square3d-xy" class="square3d"></canvas>
+    <canvas id="square3d-xz" class="square3d"></canvas>
+    <canvas id="square3d-yz" class="square3d"></canvas>
+
+</aside>
 
 
-<div id="notification-square">
-    <div class="text-notification"></div>
-    <div class="ball"></div>
+<!-- Dev stats -->
+<div id="deb-stats">
+
+    <p class="dev">Debug for one finger:</p>
+    <p>
+        Finger name: <span id="finger-name">…</span><br/>
+        Tip position: <span id="finger-position">…</span><br/>
+        Tip position (non stable): <span id="tip-position">…</span><br/>
+        Finger distance: <span id="finger-distance">…</span><br/>
+        Finger Acceleration: <span id="aceleration">…</span> <br/>
+        Normalized Position: <span id="normPosition">…</span> <br/>
+        Tip Position: <span id="tipPosition">…</span> <br/>
+        Gesture count: <span id="gestures">Gesture count</span>
+    </p>
 </div>
 
-
-
-<div id="output">Output</div>
-
-<div id="info" style="background-color: #ededed;position: fixed; top: 20px; right: 290px; width: 220px; display: block; height: 50px;" ></div>
-
-<!--ONE DOLLAR EXAMPLE-->
-<canvas style="background-color: #ededed;position: fixed; top: 80px; right: 10px;" class="sketch" id="js-sketch" width="500px" height="360px"></canvas>
-<div class="data" id="js-data">Draw anticlockwise a circle or triangle.</div>
-
-
-
+<div id="modal-gesture" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">Leap Learn Info</h4>
+            </div>
+            <div class="modal-body">
+                <p>The name can not be empty.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 
 <!-- Needs to present the Hands in 3D-->
 <script src="assets/js/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="assets/js/bower_components/bootstrap/js/modal.js"></script>
+<script src="assets/js/bower_components/bootstrap/js/alert.js"></script>
+
 <script src="assets/js/lib/three.min.js"></script>
 
 <script src="assets/js/lib/leapmotion/leap-0.6.0.js"></script>
 <script src="assets/js/lib/leapmotion/leap-plugins-0.1.6.js"></script>
 <script src="assets/js/lib/leapmotion/leap.rigged-hand-0.1.4.js"></script>
 
-<!--<script src="assets/js/lib/algorithm/leaptrainer.min.js"></script>-->
-<!--<script src="assets/js/trainer.js"></script>-->
-
-
-// ONE DOLLAR
 
 <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.1/processing-api.min.js"></script>-->
 <script src="assets/js/lib/algorithm/onedollar.min.js"></script>
 
+<script src="assets/js/vars.js"></script>
+<script src="assets/js/read.js"></script>
+<script src="assets/js/record.js"></script>
+<script src="assets/js/interface.js"></script>
 <script src="assets/js/match.js"></script>
-
-
 <script src="assets/js/home.js"></script>
-<script src="assets/js/paint.js"></script>
-
-
 
 
 </body>
