--- a/home.html
+++ b/home.html
@@ -8,6 +8,9 @@
 </head>
 <body class="home-page">
 
+<canvas id="myCanvas" width="600" height="600" style="background-color: darkgrey"></canvas>
+
+
 <!-- Logo-->
 <img src="assets/img/leaplearn_uc3m.jpg" width="400" alt=""/>
 
@@ -30,7 +33,6 @@
     <button name="addExampleGestures" class="btn btn-xs btn-default" style="background-color: white" onclick="getGestureListJSON()">Load example gestures</button>
 </aside>
 
-
 <!-- Right side-->
 <aside class="right">
 
@@ -45,9 +47,9 @@
     </div>
 
     <!-- 3D Graphics -->
-    <canvas id="square3d-xy" class="square3d"></canvas>
-    <canvas id="square3d-xz" class="square3d"></canvas>
-    <canvas id="square3d-yz" class="square3d"></canvas>
+    <canvas id="square3d-xy" class="square3d" width="100" height="100"></canvas>
+    <canvas id="square3d-xz" class="square3d" width="100" height="100"></canvas>
+    <canvas id="square3d-yz" class="square3d" width="100" height="100"></canvas>
 
 </aside>
 
