Add the gesture box draw, improve gesture detection

--- a/home.html
+++ b/home.html
@@ -8,9 +8,6 @@
 </head>
 <body class="home-page">
 
-<canvas id="myCanvas" width="600" height="600" style="background-color: darkgrey"></canvas>
-
-
 <!-- Logo-->
 <img src="assets/img/leaplearn_uc3m.jpg" width="400" alt=""/>
 
@@ -37,7 +34,7 @@
 <aside class="right">
 
     <!-- Gesture box -->
-    <div id="info"></div>
+    <!--<div id="info"></div>-->
 
     <!-- Status -->
     <div id="notification-square">
@@ -47,10 +44,11 @@
     </div>
 
     <!-- 3D Graphics -->
-    <canvas id="square3d-xy" class="square3d" width="100" height="100"></canvas>
-    <canvas id="square3d-xz" class="square3d" width="100" height="100"></canvas>
-    <canvas id="square3d-yz" class="square3d" width="100" height="100"></canvas>
-
+    <div id="graphs">
+        <canvas id="square3d-xy" class="square3d" width="100" height="100"></canvas>
+        <canvas id="square3d-xz" class="square3d" width="100" height="100"></canvas>
+        <canvas id="square3d-yz" class="square3d" width="100" height="100"></canvas>
+    </div>
 </aside>
 
 
