adding feature running in background

--- a/home.html
+++ b/home.html
@@ -100,6 +100,12 @@
 <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.1/processing-api.min.js"></script>-->
 <script src="assets/js/lib/algorithm/onedollar.min.js"></script>
 
+
+
+<script src="http://cdn.craig.is/js/mousetrap/mousetrap.min.js?9d308"></script>
+
+
+
 <script src="assets/js/vars.js"></script>
 <script src="assets/js/read.js"></script>
 <script src="assets/js/record.js"></script>
