--- a/app/home.html
+++ b/app/home.html
@@ -6,7 +6,7 @@
 <body class="home-page">
 
 <!-- Logo-->
-<img src="assets/img/leaplearn_uc3m.jpg" width="400" alt=""/>
+<img src="assets/img/leaplearn_uc3m.png" width="400" alt=""/>
 
 <!-- Image detection -->
 <img class="img-detect" src="assets/img/detect.gif" width="400" alt=""/>
@@ -17,10 +17,12 @@
   <path id="loader" transform="translate(125, 125) scale(.84)"/>
 </svg>
 
+
 <!-- Left side-->
 <aside class="left">
   <h3>Gestures:</h3>
   <input id="name-gesture" type="text"/>
+
   <button name="create_button" class="btn btn-sm btn-primary" onclick="record()">Create gesture</button>
   <ul class="gesture-list"></ul>
   <div class="extra-buttons">
@@ -72,8 +74,6 @@
       <div class="value"></div>
     </div>
   </div>
-
-
 
   <!-- 3D Graphics -->
   <div id="graphs-wrapper">
