--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,6 +18,9 @@
 </head>
 <body class="index-page">
 
+<!-- Logo-->
+<img src="assets/img/leaplearn_uc3m.png" width="400" alt=""/>
+
 <div id="postionfinger"></div>
     <!--Main content-->
     <section>
@@ -27,7 +30,7 @@
                 <source src="/assets/img/video/leapvideo.mp4" type="video/mp4">
             </video>
 
-        <!-- 
+        <!--
            -------------------------------------------
                Main page
            -------------------------------------------
@@ -58,7 +61,7 @@
                     <span class="glyphicon glyphicon-hand-up"></span>
                     Entrar
                 </a>
-                <a id="helpButton" data-button="help" href="#" class="btn btn-lg btn-default" onclick="changePages(event)"><span class="glyphicon glyphicon-info-sign"></span> Ayuda</a>
+                <!--<a id="helpButton" data-button="help" href="#" class="btn btn-lg btn-default" onclick="changePages(event)"><span class="glyphicon glyphicon-info-sign"></span> Ayuda</a>-->
         </div>
 
 
@@ -135,15 +138,13 @@
 
     <div id="stage"></div>
 
-
-
 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.5.4.min.js"></script>
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r66/three.js"></script>-->
+<script src="http://js.leapmotion.com/leap-0.6.2.min.js"></script>
+<!--<script src="//js.leapmotion.com/leap-plugins-0.1.6.1.js"></script>-->
+<!--<script src="//js.leapmotion.com/leap.rigged-hand-0.1.3.min.js"></script>-->
 <script src="assets/js/touch.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r66/three.js"></script>
-<script src="//js.leapmotion.com/leap-0.6.2.min.js"></script>
-<script src="//js.leapmotion.com/leap-plugins-0.1.6.1.js"></script>
-<script src="//js.leapmotion.com/leap.rigged-hand-0.1.3.min.js"></script>
 
 
 </body>
