--- a/app/home.html
+++ b/app/home.html
@@ -52,8 +52,8 @@
   <div class="tab">
     <ul class="tabs">
       <li><a href="#" data-axi="xy">xy</a></li>
-      <li><a href="#" data-axi="xz">xz</a></li>
       <li><a href="#" data-axi="yz">yz</a></li>
+      <li><a href="#" data-axi="xz">xz</a></li>
     </ul>
   </div>
 
@@ -85,12 +85,12 @@
   <!-- 3D Graphics -->
   <div id="graphs-wrapper">
     <span class="xy">xy</span>
-    <span class="yz">yz</span>
     <span class="xz">xz</span>
+    <span class="yz">yz</span>
     <div id="graphs">
       <canvas id="square3d-xy" data-axi="xy" class="square3d" width="100" height="100"></canvas>
-      <canvas id="square3d-yz" data-axi="yz" class="square3d" width="100" height="100"></canvas>
       <canvas id="square3d-xz" data-axi="xz" class="square3d" width="100" height="100"></canvas>
+      <canvas id="square3d-yz" data-axi="yz" class="square3d" width="100" height="100"></canvas>
     </div>
     <img src="assets/img/graph.png" class="square3d"/>
   </div>
@@ -194,7 +194,7 @@
 
 
 
-<!--<script src="assets/js/vendor/algorithm/onedollar.min.js"></script>-->
+<script src="assets/js/vendor/algorithm/onedollar.min.js"></script>
 <script src="assets/js/vendor/algorithm/onedollar.js"></script>
 <script src="assets/js/oneDollar3d.js"></script>
 
