Add config settings to Local storage

--- a/app/home.html
+++ b/app/home.html
@@ -74,6 +74,24 @@
     </div>
   </div>
 
+  <!-- Radio buttons -->
+  <div class="controls">
+    <p>Method and pointer</p>
+    <input id='dollar1' type="radio" name='r-group-1' />
+    <label for="dollar1">$1</label>
+
+    <input id='protractor' type="radio" name='r-group-1' />
+    <label for="protractor">Protractor</label>
+  </div>
+
+  <div class="controls">
+    <input id='distal' type="radio" name='r-group-2' />
+    <label for="distal">Distal</label>
+
+    <input id='metacarpal' type="radio" name='r-group-2' />
+    <label for="metacarpal">Metacarpal</label>
+  </div>
+
   <!-- 3D Graphics -->
   <div id="graphs-wrapper">
     <span class="xy">xy</span>
